--- a/home.html
+++ b/home.html
@@ -167,8 +167,8 @@
         <li><a href="#about">ABOUT</a></li>
         <li><a href="menu.php">MENU</a></li>
         <li><a href="reservations.php">RESERVATION</a></li>
+        <li><a href="cart_display.php">MY CART</a></li>
         <li><a href="#logout">LOGOUT</a></li>
-        <li><a href="mycart.php">MY CART</a></li>
       </ul>
     </div>
 
