Updated home page with better layout & trending dishes section

--- a/home.html
+++ b/home.html
@@ -1,201 +1,245 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Rancho&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Cuprum&display=swap"
-      rel="stylesheet"
-    />
-    <title>Home Page</title>
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-        font-family: Arial, sans-serif;
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rancho&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cuprum&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Euphoria+Script&display=swap" rel="stylesheet">
+  <title>FOODILITE</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
+    }
+
+    .navbar {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+      align-items: center;
+      background-color: rgba(0, 0, 0, 0.897);
+      padding: 10px 0;
+      height: 70px
+    }
+
+    .navbar h1 {
+      font-size: 50px;
+      font-family: Lilita One;
+      font-weight: 900;
+      font-weight: bold;
+      padding-left: 20px;
+      position: relative;
+    }
+
+    .navbar h1::before,
+    .navbar h1::after {
+      content: "FOODILITE";
+      position: absolute;
+      top: 0;
+      left: 20px;
+      ;
+      animation: glitter 2s infinite linear;
+      color: transparent;
+    }
+
+    .navbar h1::before {
+      color: rgb(255, 217, 0);
+    }
+
+    @keyframes glitter {
+      0% {
+        transform: translateX(-1px) translateY(-1px);
       }
 
-      .navbar {
-        display: flex;
-        justify-content: space-between;
-        width: 100%;
-        align-items: center;
-        background-color: rgba(0, 0, 0, 0.897);
-        padding: 10px 0;
-        height: 70px;
+      25% {
+        transform: translateX(1px) translateY(1px);
       }
 
-      .navbar h1 {
-        font-size: 50px;
-        font-family: Lilita One;
-        font-weight: 900;
-        font-weight: bold;
-        padding-left: 20px;
-        position: relative;
+      50% {
+        transform: translateX(-1px) translateY(-1px);
       }
 
-      .navbar h1::before,
-      .navbar h1::after {
-        content: "FOODILITE";
-        position: absolute;
-        top: 0;
-        left: 20px;
-        animation: glitter 2s infinite linear;
-        color: transparent;
+      75% {
+        transform: translateX(1px) translateY(1px);
       }
 
-      .navbar h1::before {
-        color: rgb(255, 217, 0);
+      100% {
+        transform: translateX(0) translateY(0);
       }
+    }
 
-      @keyframes glitter {
-        0% {
-          transform: translateX(-1px) translateY(-1px);
-        }
-        25% {
-          transform: translateX(1px) translateY(1px);
-        }
-        50% {
-          transform: translateX(-1px) translateY(-1px);
-        }
-        75% {
-          transform: translateX(1px) translateY(1px);
-        }
-        100% {
-          transform: translateX(0) translateY(0);
-        }
-      }
+    .nav-links {
+      list-style: none;
+      display: flex;
+      margin-left: 35px;
+    }
 
-      .nav-links {
-        list-style: none;
-        display: flex;
-        margin-left: 35px;
-      }
+    .nav-links li {
+      margin-right: 25px;
+      font-size: 20px;
+      font-family: Cuprum;
+    }
 
-      .nav-links li {
-        margin-right: 25px;
-        font-size: 20px;
-        font-family: Cuprum;
-      }
+    .nav-links a {
+      text-decoration: none;
+      color: #FFF;
+      font-weight: bold;
+    }
 
-      .nav-links a {
-        text-decoration: none;
-        color: #fff;
-        font-weight: bold;
-      }
+    .nav-links a:hover {
+      color: #FF0000;
+    }
 
-      .nav-links a:hover {
-        color: #ff0000;
-      }
+    .arrow-down {
+      text-align: center;
+      margin-top: 100px;
+    }
 
-      .arrow-down {
-        text-align: center;
-        margin-top: 100px;
-      }
+    .arrow-down a {
+      font-size: 30px;
+      color: #e4d5d5;
+      text-decoration: none;
+    }
 
-      .arrow-down a {
-        font-size: 30px;
-        color: #e4d5d5;
-        text-decoration: none;
-      }
+    .background-image {
+      background-image: url('images/strawberries-2563395_1280.jpg');
+      background-size: cover;
+      background-position: center;
+      height: 88vh;
+      position: relative;
 
-      .background-image {
-        background-image: url("images/strawberries-2563395_1280.jpg");
-        background-size: cover;
-        background-position: center;
-        height: 88vh;
-        position: relative;
-      }
+    }
 
-      &::before {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(0, 0, 0, 0.1);
-        z-index: -1;
-      }
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.1);
+      z-index: -1;
+    }
 
-      .section {
-        padding: 50px;
-        background-color: rgba(255, 255, 255, 0.8);
-      }
+    .section {
+      padding: 50px;
+      background-color: rgba(255, 255, 255, 0.8);
+    }
 
-      .section h2 {
-        font-size: 24px;
-        color: #333;
-      }
+    .section h2 {
+      font-size: 24px;
+      color: #333;
+      font-family: Euphoria Script;
+      font-weight: bold;
+      font-size: 50px;
+    }
 
-      .text-container {
-        position: absolute;
-        font-family: Rancho;
-        top: 90px;
-        left: 0;
-        width: 100%;
-        text-align: center;
-      }
+    .text-container {
+      position: absolute;
+      font-family: Rancho;
+      top: 90px;
+      left: 0;
+      width: 100%;
+      text-align: center;
+    }
 
-      .text-container h2 {
-        font-size: 120px;
-        font-weight: bold;
-        color: #fff;
-        text-shadow: 8px 8px 12px #ee1b48;
-      }
-    </style>
-  </head>
+    .text-container h2 {
+      font-size: 120px;
+      font-weight: bold;
+      color: #FFF;
+      text-shadow: 8px 8px 12px #ee1b48;
+    }
+  </style>
+</head>
 
-  <body>
-    <div class="navbar">
-      <h1>FOODILITE</h1>
-      <ul class="nav-links">
-        <li><a href="#about">ABOUT</a></li>
-        <li><a href="menu.php">MENU</a></li>
-        <li><a href="reservations.php">RESERVATION</a></li>
-        <li><a href="cart_display.php">MY CART</a></li>
-        <li><a href="#logout">LOGOUT</a></li>
-      </ul>
+<body>
+
+  <div class="navbar">
+    <h1>FOODILITE</h1>
+    <ul class="nav-links">
+      <li><a href="#about">ABOUT</a></li>
+      <li><a href="menu.php">MENU</a></li>
+      <li><a href="reservations.php">RESERVATION</a></li>
+      <li><a href="cart_display.php">MY CART</a></li>
+      <li><a href="logout.php">LOGOUT</a></li>
+    </ul>
+  </div>
+
+  <div class="background-image">
+    <div class="text-container">
+      <h2>Great Food Always</h2>
     </div>
+  </div>
 
-    <div class="background-image">
-      <div class="text-container">
-        <h2>Great Food Always</h2>
-      </div>
+  <div id="about" class="section" style="text-align: center; padding: 50px; background-color: #f8f8f8;">
+    <h2>Our Story</h2>
+    <div style="display: flex; align-items: center; justify-content: center; flex-wrap: wrap;">
+      <img
+        src="https://images.unsplash.com/photo-1556742393-d75f468bfcb0?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        alt="Our Restaurant" style="width: 45%; border-radius: 10px; margin: 10px;">
+      <p style="width: 45%; font-size: 22px; line-height: 1.6; font-family: Rancho;">
+        The Euson and Robert Families have created a unique dining experience in the charming town of Bright,
+        Indiana.
+        Our award-winning chefs bring a <b>quality, locally-driven menu</b> aimed to please! 🌟
+        <br><br>
+        Relax and enjoy a <b>nutritiously fresh meal</b> or a <b>hometown pub favorite</b> in a heart-warming
+        environment.
+        Bring your family and friends to share <b>great food, warm hospitality, and cherished moments</b> with
+        us!
+        🍽️🥂
+      </p>
     </div>
+  </div>
 
-    <div id="about" class="section">
-      <h2>About Us</h2>
-      <p>This is the About section.</p>
+  <div id="cuisines" class="section" style="text-align: center; padding: 50px;">
+    <h2>Wide Range of Cuisines</h2>
+    <p style="font-size: 22px; line-height: 1.6; font-family: Rancho;">
+      From <b>classic American comfort food</b> to <b>exotic international dishes</b>, we bring you the best
+      flavors
+      from around the world!
+      Indulge in mouth-watering <b>Italian pizzas, Japanese sushi, Indian curries, Mexican tacos</b>, and more!
+      🌎🍕🍣🌮
+    </p>
+    <div style="display: flex; justify-content: center; flex-wrap: wrap; gap: 15px; margin-top: 20px;">
+      <img
+        src="https://images.unsplash.com/photo-1595026506669-1e937fc6b9e6?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        style="width: 30%; border-radius: 10px;">
+      <img
+        src="https://images.unsplash.com/photo-1607301405390-d831c242f59b?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        alt="Japanese Cuisine" style="width: 30%; border-radius: 10px;">
+      <img
+        src="https://images.unsplash.com/photo-1613292443284-8d10ef9383fe?q=80&w=3174&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        alt="Indian Cuisine" style="width: 30%; border-radius: 10px;">
     </div>
+  </div>
 
-    <div id="our-story" class="section">
-      <h2>Our Story</h2>
-      <p>This is the Our Story section.</p>
-    </div>
+  <div id="contact-us" class="section" style="text-align: center; padding: 50px; background-color: #f8f8f8;">
+    <h2>Contact Us</h2>
+    <p style="font-size: 22px; line-height: 1.6; font-family: Rancho;">
+      Have any questions? Want to make a reservation?
+      Reach out to us via <b>phone, email, or visit us in person</b>. 📍📞📧
+      <br><br>
+      <strong>📍 Address:</strong> 123 Bright Street, Indiana, USA
+      <br>
+      <strong>📞 Phone:</strong> (123) 456-7890
+      <br>
+      <strong>📧 Email:</strong> contact@foodilite.com
+    </p>
+  </div>
 
-    <div id="cuisines" class="section">
-      <h2>Wide Range of Cuisines</h2>
-      <p>This is the Wide Range of Cuisines section.</p>
-    </div>
 
-    <div id="contact-us" class="section">
-      <h2>Contact Us</h2>
-      <p>This is the Contact Us section.</p>
-    </div>
-  </body>
+</body>
+
 </html>
